Add files updated by last code gen
