# python-flask/openapi_server/models/__init__.py
@@ -3,5 +3,8 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from openapi_server.models.log_inner import LogInner
+from openapi_server.models.log_entry import LogEntry
 from openapi_server.models.robots_file import RobotsFile
+from openapi_server.models.so_metadata import SOMetadata
+from openapi_server.models.sitemap import Sitemap
+from openapi_server.models.sitemap_urlset import SitemapUrlset
