# python-flask/openapi_server/models/robots_file.py
@@ -6,10 +6,10 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model_ import Model
-from openapi_server.models.log_inner import LogInner
+from openapi_server.models.log_entry import LogEntry
 from openapi_server import util
 
-from openapi_server.models.log_inner import LogInner  # noqa: E501
+from openapi_server.models.log_entry import LogEntry  # noqa: E501
 
 class RobotsFile(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -23,7 +23,7 @@ class RobotsFile(Model):
         :param url: The url of this RobotsFile.  # noqa: E501
         :type url: str
         :param log: The log of this RobotsFile.  # noqa: E501
-        :type log: List[LogInner]
+        :type log: List[LogEntry]
         :param evaluated_date: The evaluated_date of this RobotsFile.  # noqa: E501
         :type evaluated_date: datetime
         :param sitemaps: The sitemaps of this RobotsFile.  # noqa: E501
@@ -31,7 +31,7 @@ class RobotsFile(Model):
         """
         self.openapi_types = {
             'url': str,
-            'log': List[LogInner],
+            'log': List[LogEntry],
             'evaluated_date': datetime,
             'sitemaps': List[str]
         }
@@ -90,7 +90,7 @@ class RobotsFile(Model):
 
 
         :return: The log of this RobotsFile.
-        :rtype: List[LogInner]
+        :rtype: List[LogEntry]
         """
         return self._log
 
@@ -100,7 +100,7 @@ class RobotsFile(Model):
 
 
         :param log: The log of this RobotsFile.
-        :type log: List[LogInner]
+        :type log: List[LogEntry]
         """
         if log is None:
             raise ValueError("Invalid value for `log`, must not be `None`")  # noqa: E501
@@ -111,7 +111,7 @@ class RobotsFile(Model):
     def evaluated_date(self):
         """Gets the evaluated_date of this RobotsFile.
 
-        The time stamp for when the evaluation of robots.txt  was initiated.   # noqa: E501
+        The time stamp for when the evaluation of robots.txt was initiated.   # noqa: E501
 
         :return: The evaluated_date of this RobotsFile.
         :rtype: datetime
@@ -122,7 +122,7 @@ class RobotsFile(Model):
     def evaluated_date(self, evaluated_date):
         """Sets the evaluated_date of this RobotsFile.
 
-        The time stamp for when the evaluation of robots.txt  was initiated.   # noqa: E501
+        The time stamp for when the evaluation of robots.txt was initiated.   # noqa: E501
 
         :param evaluated_date: The evaluated_date of this RobotsFile.
         :type evaluated_date: datetime
